--- a/Begin/ContactManager/ContactManager.csproj
+++ b/Begin/ContactManager/ContactManager.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <None Remove="Controllers\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
